<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Activity.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_with_your_credential"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/swald"/>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/profile"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/border_color"/>

        <EditText
            android:id="@+id/reg_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:layout_marginTop="20dp"
            android:hint="@string/name"
            android:maxLines="1"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:maxLines="1"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/reg_cpasswrod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:layout_marginTop="10dp"
            android:hint="@string/re_enter_password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:padding="10dp"/>

        <Button
            android:id="@+id/reg_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/swald"
            android:layout_marginTop="10dp"
            android:padding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_id"
            android:fontFamily="@font/swald"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_here"
            android:textColor="@color/purple"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/swald"
            android:textSize="16sp"/>

    </LinearLayout>

</RelativeLayout>