<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/logobg"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_login"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/swald"/>

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_your_email"
            android:maxLines="1"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_your_password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:padding="10dp"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="@font/swald"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:padding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:fontFamily="@font/swald"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_here"
            android:textColor="@color/purple"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/swald"
            android:textSize="16sp"/>

    </LinearLayout>

</RelativeLayout>