<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".Activity.MainActivity">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/logo"/>

        <TextView
            android:text="@string/aponjon_1"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30sp"
            android:fontFamily="@font/comforter"
            android:letterSpacing=".15"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/chat_with_your_friends_and_family"
            android:gravity="center"
            android:textStyle="normal"
            android:textSize="18sp"
            android:fontFamily="@font/swald"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:text="@string/developed_by"
            android:gravity="center"
            android:textSize="12sp"
            android:fontFamily="@font/swald"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/ashrafunahid"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:fontFamily="@font/swald"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>