<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:src="@drawable/ic_baseline_power_settings_new_24"
        app:tint="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_want_to_n_logout"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"/>

    <LinearLayout
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/noBtn"
            android:layout_marginRight="@dimen/_2sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:gravity="center"
            android:clickable="true"
            android:layout_weight="1"
            android:background="@color/border_color"
            android:textColor="@color/black"
            android:padding="10dp"
            android:textSize="@dimen/_20sdp"/>

        <TextView
            android:id="@+id/yesBtn"
            android:layout_marginLeft="@dimen/_2sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:textColor="@color/white"
            android:background="@color/purple"
            android:padding="10dp"
            android:textSize="@dimen/_20sdp"/>
    </LinearLayout>
</LinearLayout>